# rampg

./: .gitignore  AGENTS.md  README.md  meson.build
config/: rampg_version.h.in
docs/: pyproject.toml
docs/sphinx/: Doxyfile  Makefile  conf.py  index.rst
docs/sphinx/api/: modules.rst  rampg.rst  rampg_conf.rst
include/: rampg.h  rampg_conf.h
src/: rampg.c
tests/: meson.build  test_rampg.c
