[project]
name = "rampg-docs"
version = "0.1.0"
description = "Documentation build dependencies for rampg"
requires-python = ">=3.10"
dependencies = [
    "sphinx",
    "breathe",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
